[package]
name = "rusl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossbeam-channel="0.5.4"
regex = "1.5.6"
num_cpus = "1.13"
grep = "0.2.8" #ripgrep
ignore = "0.4.18" #parallel walker from ripgrep
walkdir = "2.2.7" #walker from ripgrep
clipboard = "0.5.0" #for clipboard
dirs = "4.0.0" #for getting config file
serde = { version="1.0.137", features=["derive"]}  #save config
toml = "0.5.9" #config format

#dioxus
dioxus = { version = "0.2.4", features = ["desktop"] } #GUI
tokio = "1.19.0" #for dioxus
futures-channel = "0.3.21" #for dioxus


[build-dependencies]
embed-resource="1.7.2" #for icon



