[package]
name = "rusl"
version = "0.1.2"
edition = "2021"
build = "build.rs"
description = "search gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6" # for pattern matching
num_cpus = "1.13" # for parallel search
grep = "0.2.8" #ripgrep
ignore = "0.4.18" #parallel walker from ripgrep
walkdir = "2.2.7" #walker from ripgrep
clipboard = "0.5.0" #for clipboard
dirs = "4.0.0" #for getting config file
serde = { version="1.0.137", features=["derive"]}  #save config
toml = "0.5.9" #config format
rfd = "0.6" #for selecting directory for gui
druid  = {  git ="https://github.com/linebender/druid", features=["im"]} #GUI

[build-dependencies]
embed-resource="1.7.2" #for icon

#cargo bundle for MacOS
[package.metadata.bundle]
identifier = "com.github.griccardos.rusl"
icon=["src/icons/icon.png"]
