[package]
name = "rusl"
version = "0.1.7"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librusl = {path="../librusl"}
dioxus = "0.4.0"
tokio = "1.32.0" #for dioxus
futures-channel = "0.3.28" #for dioxus
dioxus-desktop = "0.4.0"
image = "0.24.7"


[build-dependencies]
embed-resource="2.3.0" #for icon



