[package]
name = "rusl"
version = "0.1.9"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librusl = {path="../librusl"}
dioxus = {version = "0.6",features = ["desktop"]}
tokio = "1" #for dioxus
futures-channel = "0.3" #for dioxus
image = "0"
crossbeam-channel = "0.5.14"


[build-dependencies]
embed-resource="2.3.0" #for icon
