[package]
name = "rusl"
version = "0.2.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librusl = { path = "../librusl" }
dioxus = { version = "0.7", features = ["desktop"] }
tokio = "1"                                                 #for dioxus
futures-channel = "0.3"                                     #for dioxus
image = "0"
crossbeam-channel = "0.5"


[build-dependencies]
embed-resource = "3.0" #for icon

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
