[package]
name = "rusl"
version = "0.1.6"
edition = "2021"
build = "build.rs"
description = "search gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librusl = { path="../librusl"}
rfd = "0.6" #for selecting directory for gui
druid  = {  git ="https://github.com/linebender/druid", features=["im"]} #GUI
regex = "1.6.0"

[build-dependencies]
embed-resource="1.7.3" #for icon

#cargo bundle for MacOS
[package.metadata.bundle]
identifier = "com.github.griccardos.rusl"
icon=["src/icons/icon.png"]
