[package]
name = "rusl"
version = "0.2.0"
edition = "2021"
build = "build.rs"
description = "search gui"

[dependencies]
librusl = { path="../librusl"}
rfd = "0.11.0" #for selecting directory for gui
druid  ={version= "0.8.2", features=["im"]} #GUI
regex = "1.6.0"

[build-dependencies]
embed-resource="1.7.3" #for icon

#cargo bundle for MacOS
[package.metadata.bundle]
identifier = "com.github.griccardos.rusl"
icon=["src/icons/icon.png"]
