[package]
name = "rusl"
version = "0.7.1"
edition = "2021"
build = "build.rs"
description = "search gui"

[dependencies]
librusl = { path="../librusl"}
rfd = "0" #for selecting directory for gui
druid  ={ version = "0.8.3", features = ["im", "raw-win-handle"] } #GUI
regex = "1" 

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef"] } #for icon in windows

[build-dependencies]
winres ="0.1.12"#for icon in windows

#cargo bundle for MacOS
[package.metadata.bundle]
identifier = "com.github.griccardos.rusl"
icon=["src/icons/icon.png"]
