[package]
name = "rusl"
version = "0.1.6"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librusl={path="../librusl"}
rfd = "0.9.1" #for selecting directory for gui
eframe = "0.18.0" #egui
image = "0.24.2" #for titlebar icon

[build-dependencies]
embed-resource="1.7.2" #for icon

