[package]
name = "rusl"
version = "0.4.0"
edition = "2021"
build = "build.rs"

[dependencies]
librusl = { path = "../librusl" }
rfd = "0.15"                                                            #for selecting directory for gui
iced = { version = "0.13.1", features = ["debug", "tokio"] } #gui
iced_core = { version = "0.13.1" }
image = "0.25"                                                          #for icon

[build-dependencies]
embed-resource = "2.3.0" #for icon
