[package]
name = "rusl"
version = "0.5"
edition = "2024"
build = "build.rs"

[dependencies]
librusl = { path = "../librusl" }
rfd = "0" #for selecting directory for gui
iced = { git = "https://github.com/iced-rs/iced", features = [
    "debug",
    "tokio",
] } #gui
# iced = {version="0.12", features = ["debug", "smol"] }#gui
image = "0" #for icon

[build-dependencies]
embed-resource = "3.0" #for icon
